--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Aly Abdelrahman"
+      content="Aly Abdelrahman FrontEnd Developer"
     />
+    <title>&#128526; Aly's Cv</title>
+    <script src="https://ajx.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="tagcanvas.js"></script>
     <style>
       .fp-bg{
           transform: translate3d(0,0,0);
@@ -19,7 +21,6 @@
           background-position: center 80%;
       }
       </style>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,7 +35,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
